project css and html changes

--- a/Proyecto/base.html
+++ b/Proyecto/base.html
@@ -52,9 +52,30 @@
     </article>
     <footer>
 	    <div class="footer-sections">
-	    	<div>seccion 1</div>
-	    	<div>seccion 2</div>
-	    	<div>seccion 3</div>
+	    	<div class="section-separator">
+	    		<h4>seccion 1</h4>
+	    		<ul>
+		            <li><a href="base.css">enlace</a></li>
+		            <li><a href="base.css">enlace</a></li>
+		            <li><a href="base.css">enlace</a></li>
+		        </ul>
+	    	</div>
+	    	<div class="section-separator">
+	    		<h4>seccion 2</h4>
+	    		<ul>
+		            <li><a href="base.css">enlace</a></li>
+		            <li><a href="base.css">enlace</a></li>
+		            <li><a href="base.css">enlace</a></li>
+		        </ul>
+	    	</div>
+	    	<div>
+	    		<h4>seccion 3</h4>
+	    		<ul>
+		            <li><a href="base.css">enlace</a></li>
+		            <li><a href="base.css">enlace</a></li>
+		            <li><a href="base.css">enlace</a></li>
+		        </ul>
+	    	</div>
     	</div>
     	<div class="footer-sections">
     		<img alt="" src="img/logo-bottom.png">
