prev de noticia en listado de noticias

--- a/Proyecto/base.html
+++ b/Proyecto/base.html
@@ -13,7 +13,7 @@
 	<div class="head" id="nombre-categorias">
 		<div>
 			<img alt="" src="img/menu.png">
-			<img alt="" src="img/logo-top.png">
+			<a href=""><img alt="" src="img/logo-top.png"></a>
 			<img alt="" src="img/door.png">
 		</div>
 		<div id="categorias">
@@ -24,8 +24,8 @@
 			</ul>
 		</div>
 		<div class="rigth">
-			<a>login</a> /
-			<a>registrarse</a>
+			<a href="">login</a> /
+			<a href="">registrarse</a>
 		</div>
 	</div>
 	<div class="head" id="logo-search">
