--- a/Proyecto/base.html
+++ b/Proyecto/base.html
@@ -82,7 +82,8 @@
     		<div id="copyrigth">
     			<a>legal </a>/
     			<a>quienes somos </a>/
-    			<a>HTML5</a>
+    			<a>HTML5</a> |
+    			Daniel Correa Barrios, Universidad de Extremadura
     		</div>
     	</div>
     </footer>
