--- a/Proyecto/login.html
+++ b/Proyecto/login.html
@@ -51,8 +51,9 @@
     	<section class="login-left">
     		<h2><div class="titulo-general">Iniciar Sesion</div></h2>
     		<p>
-    			Bienvenido a meneame, bla bla bla bla
+    			Bienvenido a meneame,
     		</p>
+    		<img src="img/news.png"> 
     	</section>
     	<section class="login-rigth">
     		<div class="login-inputs">
@@ -97,7 +98,8 @@
     		<div id="copyrigth">
     			<a>legal </a>/
     			<a>quienes somos </a>/
-    			<a>HTML5</a>
+    			<a>HTML5</a> |
+    			Daniel Correa Barrios, Universidad de Extremadura
     		</div>
     	</div>
     </footer>
