--- a/Proyecto/lista-noticias.html
+++ b/Proyecto/lista-noticias.html
@@ -172,7 +172,8 @@
     		<div id="copyrigth">
     			<a>legal </a>/
     			<a>quienes somos </a>/
-    			<a>HTML5</a>
+    			<a>HTML5</a> |
+    			Daniel Correa Barrios, Universidad de Extremadura
     		</div>
     	</div>
     </footer>
