first comment version

--- a/Proyecto/view-comment.html
+++ b/Proyecto/view-comment.html
@@ -129,13 +129,28 @@
 			<!--fin una noticia-->
 
 			<!--fin todas las noticias-->
-			<!--inicio comentarios-->
+			<!--inicio comentarios destacados-->
 			<section>
 				<div id="popular-comments">
 					Comentarios destacados:
 					<img class="new-pic" src="img/pic-test.jpeg">
 					<img class="new-pic" src="img/pic-test.jpeg">
 					<img class="new-pic" src="img/pic-test.jpeg">
+				</div>
+			</section>
+			<!--fin comentarios destacados-->
+			<!--inicio ver comentarios-->
+			<section>
+				<div class="comment">
+					<div class="comment-body">
+						<p>
+							<span class="num-comment">#33</span> Lo que no se puede hacer es envasar aceite virgen extra en un envase cutre de plástico. Los italianos le compran el aceite a España por cuatro céntimos, luego lo envasan en botellas de vidrio muy chulas y luego lo venden a buen precio. <a href="www.eleconomista.es/empresas-finanzas">a</a>
+						</p>
+					</div>
+					<div class="comment-foot">
+						<div></div>
+						<div></div>
+					</div>
 				</div>
 			</section>
     </article>
