comment votes first version

--- a/Proyecto/view-comment.html
+++ b/Proyecto/view-comment.html
@@ -148,8 +148,19 @@
 						</p>
 					</div>
 					<div class="comment-foot">
-						<div></div>
-						<div></div>
+						<div class="comment-votes">
+							Votos: <span class="num-votes">30</span>
+							Karma: <b>34</b>
+							<img src="img/karma.png">
+							<img src="img/vote_none.png">
+							<img src="img/reply.png">
+
+						</div>
+						<div class="comment-user">
+							13/02/2016 3:00pm
+							<a href="user">usuario-tal</a>
+							<img class="comment-user-prev" src="img/pic-test.jpeg">
+						</div>
 					</div>
 				</div>
 			</section>
