comment inside comment

--- a/Proyecto/view-comment.html
+++ b/Proyecto/view-comment.html
@@ -140,7 +140,7 @@
 			</section>
 			<!--fin comentarios destacados-->
 			<!--inicio ver comentarios-->
-			<section>
+			<section class="sect-comment">
 				<div class="comment">
 					<div class="comment-body">
 						<p>
@@ -162,6 +162,54 @@
 							<img class="comment-user-prev" src="img/pic-test.jpeg">
 						</div>
 					</div>
+					<!--comentario dentro de comentario-->
+					<div class="comment">
+						<div class="comment-body">
+							<p>
+								<span class="num-comment">#33</span> Lo que no se puede hacer es envasar aceite virgen extra en un envase cutre de plástico. Los italianos le compran el aceite a España por cuatro céntimos, luego lo envasan en botellas de vidrio muy chulas y luego lo venden a buen precio. <a href="www.eleconomista.es/empresas-finanzas">a</a>
+							</p>
+						</div>
+						<div class="comment-foot">
+							<div class="comment-votes">
+								Votos: <span class="num-votes">30</span>
+								Karma: <b>34</b>
+								<img src="img/karma.png">
+								<img src="img/vote_none.png">
+								<img src="img/reply.png">
+
+							</div>
+							<div class="comment-user">
+								13/02/2016 3:00pm
+								<a href="user">usuario-tal</a>
+								<img class="comment-user-prev" src="img/pic-test.jpeg">
+							</div>
+						</div>
+						<!--comentario dentro de comentario-->
+						<div class="comment">
+							<div class="comment-body">
+								<p>
+									<span class="num-comment">#33</span> Lo que no se puede hacer es envasar aceite virgen extra en un envase cutre de plástico. Los italianos le compran el aceite a España por cuatro céntimos, luego lo envasan en botellas de vidrio muy chulas y luego lo venden a buen precio. <a href="www.eleconomista.es/empresas-finanzas">a</a>
+								</p>
+							</div>
+							<div class="comment-foot">
+								<div class="comment-votes">
+									Votos: <span class="num-votes">30</span>
+									Karma: <b>34</b>
+									<img src="img/karma.png">
+									<img src="img/vote_none.png">
+									<img src="img/reply.png">
+
+								</div>
+								<div class="comment-user">
+									13/02/2016 3:00pm
+									<a href="user">usuario-tal</a>
+									<img class="comment-user-prev" src="img/pic-test.jpeg">
+								</div>
+							</div>
+						</div>
+						<!--fin comentario dentro de comentario-->
+					</div>
+					<!--fin comentario dentro de comentario-->
 				</div>
 			</section>
     </article>
