--- a/Proyecto/view-comment.html
+++ b/Proyecto/view-comment.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 	<meta charset="utf-8">
- 	<title>Meneame</title>
+ 	<title>Comentarios</title>
  	<link rel="shortcut icon" href="https://mnmstatic.net/v_40/img/favicons/logo_196x196.png" sizes="196x196">
  	<link rel="shortcut icon" href="https://mnmstatic.net/v_40/img/favicons/logo_64x64.png" sizes="64x64">
  	<link rel="shortcut icon" href="https://mnmstatic.net/v_40/img/favicons/logo_16x16.png" sizes="16x16">
@@ -140,7 +140,7 @@
 			</section>
 			<!--fin comentarios destacados-->
 			<!--inicio ver comentarios-->
-			<section class="sect-comment">
+			<section>
 				<div class="comment">
 					<div class="comment-body">
 						<p>
@@ -212,6 +212,13 @@
 					<!--fin comentario dentro de comentario-->
 				</div>
 			</section>
+			<!--fin ver comentarios-->
+			<!--escribir comentario-->
+			<fieldset id="box-comment" >
+				<legend>Escriba un comentario:</legend>
+					<textarea rows="10" cols="150"></textarea>
+			</fieldset>
+			<!--fin escribir comentario-->
     </article>
     <footer>
 	    <div class="footer-sections">
