--- a/Proyecto/view-comment.html
+++ b/Proyecto/view-comment.html
@@ -216,7 +216,11 @@
 			<!--escribir comentario-->
 			<fieldset id="box-comment" >
 				<legend>Escriba un comentario:</legend>
-					<textarea rows="10" cols="150"></textarea>
+				<form method="post" action="">
+					<textarea rows="7" cols="150"></textarea><br>
+					<input id="bt" type="submit" value="Enviar">
+				</form>
+
 			</fieldset>
 			<!--fin escribir comentario-->
     </article>
