--- a/Proyecto/view-comment.html
+++ b/Proyecto/view-comment.html
@@ -140,7 +140,7 @@
 			</section>
 			<!--fin comentarios destacados-->
 			<!--inicio ver comentarios-->
-			<section>
+			<section class="comments-queue">
 				<div class="comment">
 					<div class="comment-body">
 						<p>
