validators and ver-perfil first

--- a/Proyecto/lista-noticias.html
+++ b/Proyecto/lista-noticias.html
@@ -55,10 +55,10 @@
     	<div id="visitadas"></div>
     </aside>
     <article>
-    	<h2>
-    		<div class="titulo-general">Noticias de categoria:</div>
-    		 <div class="titulo-especifico">nombrecategoria</div>
-    	</h2>
+    	<div class="titulo">
+    		<div class="titulo-general"><h2>Noticias de categoria:</h2></div>
+    		 <div class="titulo-especifico"><h2>nombrecategoria</h2></div>
+    	</div>
     		<!--una notificia-->
 			<section>
 					<div class="info-menem">
@@ -79,7 +79,7 @@
 					<div class="info-noticia">
 						<h3><a href="ksjs.hmtl">Titulo de la noticia</a></h3>
 						<div class="info-user-noticia">
-							<img class="new-pic" src="img/pic-test.jpeg">
+							<img alt="Usuario" class="new-pic" src="img/pic-test.jpeg">
 							<div class="user-and-date">
 								<div>
 									por
@@ -91,7 +91,7 @@
 							</div>
 						</div>
 						<div class="contenido">
-							<img class="prev-noticia" src="img/pic-test.jpeg">
+							<img alt="Vista previa noticia" class="prev-noticia" src="img/pic-test.jpeg">
 							<p>
 								descripcion de la noticia bla bla bla
 								descripcion de la noticia bla bla bla
@@ -109,8 +109,8 @@
 							<span class="noticia-sep"><b>negativos:</b> 90</span>
 							<span class="noticia-sep">|</span>
 							<span class="noticia-sep"><b>compartir:</b>
-							 <a href=""><img class="social-icon" src="img/fb.png"></a>
-							 <a href=""><img class="social-icon" src="img/tw.png"></a>
+							 <a href=""><img alt="" class="social-icon" src="img/fb.png"></a>
+							 <a href=""><img alt="" class="social-icon" src="img/tw.png"></a>
 							</span>
 						</div>
 						<div class="show-comments">
