--- a/Proyecto/registro.html
+++ b/Proyecto/registro.html
@@ -51,28 +51,28 @@
     	<h2 id="titulo">Registro</h2>
     	<section id="bloque-registro">
     		<div class="img-sg">
-	    		<img src="img/reg.png">
+	    		<img alt="" src="img/reg.png">
 	    	</div>
     		<div id="inputs">
-    			<form action="" method="post">
+    			<form action="/" method="post">
 	    			<div class="row">
 			    		<label>Nombre de usuario:</label>
-			    		<input class="rg-inp" type="text" requiered placeholder="nombre usuario">
+			    		<input class="rg-inp" type="text"  placeholder="nombre usuario" required>
 			    		<input type="button" value="Verificar">
 		    		</div>
 		    		<div class="row">
 			    		<label>Correo electronico:</label>
-			    		<input class="rg-inp" type="email" requiered placeholder="email">
+			    		<input class="rg-inp" type="email"  placeholder="email" required>
 		    		</div>
 		    		<div class="row">
 			    		<label>Clave:</label>
-			    		<input class="rg-inp" type="password" requiered placeholder="clave">
+			    		<input class="rg-inp" type="password"  placeholder="clave" required>
 		    		</div>
 		    		<div class="row">
 			    		<label>Confirmar clave:</label>
-			    		<input class="rg-inp" type="password" requiered placeholder="verificar clave">
+			    		<input class="rg-inp" type="password"  placeholder="verificar clave" required>
 		    		</div>
-		    		<input type="checkbox" requiered name="vehicle" value="ok">Acepto los terminos y condiciones <br/><br/>
+		    		<input type="checkbox" required name="vehicle" value="ok">Acepto los terminos y condiciones <br/><br/>
 		    		<input class="rg-bt" type="submit" value="Enviar">
 		    	</form>
 	    	</div>
