--- a/Proyecto/ver-perfil.html
+++ b/Proyecto/ver-perfil.html
@@ -2,13 +2,13 @@
 <html lang="es">
 <head>
 	<meta charset="utf-8">
- 	<title>Login</title>
+ 	<title>nombreusuario</title>
  	<link rel="shortcut icon" href="https://mnmstatic.net/v_40/img/favicons/logo_196x196.png" type="image/png" sizes="196x196">
  	<link rel="shortcut icon" href="https://mnmstatic.net/v_40/img/favicons/logo_64x64.png" type="image/png" sizes="64x64">
  	<link rel="shortcut icon" href="https://mnmstatic.net/v_40/img/favicons/logo_16x16.png" type="image/png" sizes="16x16">
  	<link rel="shortcut icon" href="https://mnmstatic.net/v_40/img/favicons/logo_128x128.png" type="image/png" sizes="128x128">
  	<link rel="stylesheet" href="css/base.css">
- 	<link rel="stylesheet" href="css/login.css">
+ 	<link rel="stylesheet" href="css/ver-perfil.css">
 </head>
 <body>
 	<div class="head" id="nombre-categorias">
@@ -48,25 +48,11 @@
         </ul>
     </nav>
     <article>
-    	<section class="login-left">
-    		<div class="titulo-general"><h2>Iniciar Sesion</h2></div>
-    		<p>
-    			Bienvenido a meneame,
-    		</p>
-    		<img alt="" src="img/news.png"> 
-    	</section>
-    	<section class="login-rigth">
-    		<div class="login-inputs">
-    			<form action="/" method="post">
-	    			<input class="lg-inp" type="text" placeholder="Nombre de usuario">
-	    			<input class="lg-inp" placeholder="Contraseña">
-	    			<input class="lg-bt" type="submit" value="Entrar">
-    			</form>
-    			<p>
-    				<a href="forgot">¿Ha olvidado su contraseña?</a>
-    			</p>
-    		</div> 
-    	</section>
+    	<div class="titulo">
+    		<div class="titulo-general"><h2>Información del perfil:</h2></div>
+    		<div class="titulo-especifico"><h2>nombreusuario</h2></div>
+    	</div>
+    	
     </article>
     <footer>
 	    <div class="footer-sections">
