--- a/Proyecto/view-comment.html
+++ b/Proyecto/view-comment.html
@@ -56,10 +56,6 @@
     	<div id="visitadas"></div>
     </aside>
     <article>
-    	<h2>
-    		<div class="titulo-general">Noticias de categoria:</div>
-    		 <div class="titulo-especifico">nombrecategoria</div>
-    	</h2>
     		<!--una notificia-->
 			<section>
 					<div class="info-menem">
@@ -80,7 +76,7 @@
 					<div class="info-noticia">
 						<h3><a href="ksjs.hmtl">Titulo de la noticia</a></h3>
 						<div class="info-user-noticia">
-							<img class="new-pic" src="img/pic-test.jpeg">
+							<img alt="Usuario" class="new-pic" src="img/pic-test.jpeg">
 							<div class="user-and-date">
 								<div>
 									por
@@ -92,7 +88,7 @@
 							</div>
 						</div>
 						<div class="contenido">
-							<img class="prev-noticia" src="img/pic-test.jpeg">
+							<img alt="Previsualizacion noticia" class="prev-noticia" src="img/pic-test.jpeg">
 							<p>
 								descripcion de la noticia bla bla bla
 								descripcion de la noticia bla bla bla
@@ -110,8 +106,8 @@
 							<span class="noticia-sep"><b>negativos:</b> 90</span>
 							<span class="noticia-sep">|</span>
 							<span class="noticia-sep"><b>compartir:</b>
-							 <a href=""><img class="social-icon" src="img/fb.png"></a>
-							 <a href=""><img class="social-icon" src="img/tw.png"></a>
+							 <a href=""><img alt="" class="social-icon" src="img/fb.png"></a>
+							 <a href=""><img alt="" class="social-icon" src="img/tw.png"></a>
 							</span>
 						</div>
 						<div class="show-comments">
@@ -133,9 +129,9 @@
 			<section>
 				<div id="popular-comments">
 					Comentarios destacados:
-					<img class="new-pic" src="img/pic-test.jpeg">
-					<img class="new-pic" src="img/pic-test.jpeg">
-					<img class="new-pic" src="img/pic-test.jpeg">
+					<img alt="Usuario" class="new-pic" src="img/pic-test.jpeg">
+					<img alt="Usuario" class="new-pic" src="img/pic-test.jpeg">
+					<img alt="Usuario" class="new-pic" src="img/pic-test.jpeg">
 				</div>
 			</section>
 			<!--fin comentarios destacados-->
@@ -151,15 +147,15 @@
 						<div class="comment-votes">
 							Votos: <span class="num-votes">30</span>
 							Karma: <b>34</b>
-							<img src="img/karma.png">
-							<img src="img/vote_none.png">
-							<img src="img/reply.png">
+							<img alt="" src="img/karma.png">
+							<img alt="" src="img/vote_none.png">
+							<img alt="" src="img/reply.png">
 
 						</div>
 						<div class="comment-user">
 							13/02/2016 3:00pm
 							<a href="user">usuario-tal</a>
-							<img class="comment-user-prev" src="img/pic-test.jpeg">
+							<img alt="Usuario" class="comment-user-prev" src="img/pic-test.jpeg">
 						</div>
 					</div>
 					<!--comentario dentro de comentario-->
@@ -173,15 +169,15 @@
 							<div class="comment-votes">
 								Votos: <span class="num-votes">30</span>
 								Karma: <b>34</b>
-								<img src="img/karma.png">
-								<img src="img/vote_none.png">
-								<img src="img/reply.png">
+								<img alt="" src="img/karma.png">
+								<img alt="" src="img/vote_none.png">
+								<img alt="" src="img/reply.png">
 
 							</div>
 							<div class="comment-user">
 								13/02/2016 3:00pm
 								<a href="user">usuario-tal</a>
-								<img class="comment-user-prev" src="img/pic-test.jpeg">
+								<img alt="Usuario" class="comment-user-prev" src="img/pic-test.jpeg">
 							</div>
 						</div>
 						<!--comentario dentro de comentario-->
@@ -195,15 +191,15 @@
 								<div class="comment-votes">
 									Votos: <span class="num-votes">30</span>
 									Karma: <b>34</b>
-									<img src="img/karma.png">
-									<img src="img/vote_none.png">
-									<img src="img/reply.png">
+									<img alt="" src="img/karma.png">
+									<img alt="" src="img/vote_none.png">
+									<img alt="" src="img/reply.png">
 
 								</div>
 								<div class="comment-user">
 									13/02/2016 3:00pm
 									<a href="user">usuario-tal</a>
-									<img class="comment-user-prev" src="img/pic-test.jpeg">
+									<img alt="Usuario" class="comment-user-prev" src="img/pic-test.jpeg">
 								</div>
 							</div>
 						</div>
@@ -216,7 +212,7 @@
 			<!--escribir comentario-->
 			<fieldset id="box-comment" >
 				<legend>Escriba un comentario:</legend>
-				<form method="post" action="">
+				<form method="post" action="/">
 					<textarea rows="7" cols="150"></textarea><br>
 					<input id="bt" type="submit" value="Enviar">
 				</form>
