--- a/Proyecto/ver-perfil.html
+++ b/Proyecto/ver-perfil.html
@@ -52,7 +52,46 @@
     		<div class="titulo-general"><h2>Información del perfil:</h2></div>
     		<div class="titulo-especifico"><h2>nombreusuario</h2></div>
     	</div>
-    	
+    	<fieldset>
+    		<legend>Información personal</legend>
+    		<div id="pic-user">
+    			<img alt="avatar usuario" src="img/pic-test.jpeg">
+    			<input id="bt-cambiar" type="button" value="Cambiar">
+    		</div>
+    		<table>
+    			<tbody>
+    				<tr>
+    					<th>usuario:</th>
+    					<td>danielcb</td>
+    				</tr>
+    				<tr>
+    					<th>desde:</th>
+    					<td>14/02/2016</td>
+    				</tr>
+    				<tr>
+    					<th>karma:</th>
+    					<td>1000</td>
+    				</tr>
+    				<tr>
+    					<th>noticias publicadas:</th>
+    					<td>1000</td>
+    				</tr>
+    				<tr>
+    					<th>comentarios:</th>
+    					<td>1000</td>
+    				</tr>
+    				<tr>
+    					<th>numero de votos:</th>
+    					<td>1000</td>
+    				</tr>
+    			</tbody>
+    		</table>
+
+    	</fieldset>
+    	<fieldset>
+    		<legend>Ultima dirección IP</legend>
+    		192.168.45.78
+    	</fieldset>
     </article>
     <footer>
 	    <div class="footer-sections">
