modif perfil button

--- a/Proyecto/ver-perfil.html
+++ b/Proyecto/ver-perfil.html
@@ -52,6 +52,9 @@
     		<div class="titulo-general"><h2>Información del perfil:</h2></div>
     		<div class="titulo-especifico"><h2>nombreusuario</h2></div>
     	</div>
+    	<div id="modif-perfil">
+    		<input type="button" value="Modificar Perfil">
+    	</div><br/><br/>
     	<fieldset>
     		<legend>Información personal</legend>
     		<div id="pic-user">
