user info loged

--- a/Proyecto/ver-perfil.html
+++ b/Proyecto/ver-perfil.html
@@ -24,9 +24,10 @@
 				<li><a>deportes</a></li>
 			</ul>
 		</div>
-		<div class="rigth">
-			<a href="">login</a> /
-			<a href="">registrarse</a>
+		<div class="rigth login-succ">
+			<a hred="">nombreusuario</a>
+			<img id="avatar-login" alt="avatar usuario" src="img/pic-test.jpeg">
+			<img id="shutdown" alt="" src="img/logout.png">
 		</div>
 	</div>
 	<div class="head" id="logo-search">
