first release, new delete modify news

--- a/Proyecto/base.html
+++ b/Proyecto/base.html
@@ -30,7 +30,7 @@
 	</div>
 	<div class="head" id="logo-search">
 		<div><img alt="" src="img/elef.png"></div>
-		<div><b>Nombre-categoria</b></div>
+		<div><b>edicion general</b></div>
 		<div>
 			<img alt="" src="img/fb.png">
 			<img alt="" src="img/tw.png">
@@ -41,9 +41,10 @@
 	</div>
 	<nav>
         <ul>
-            <li><a href="base.css">item</a></li>
-            <li><a href="base.css">item</a></li>
-            <li><a href="base.css">item</a></li>
+            <li><a href="registrar-noticia.html">enviar historia</a></li>
+            <li><a href="base.css">portada</a></li>
+            <li><a href="base.css">nuevas</a></li>
+            <li><a href="base.css">populares</a></li>
         </ul>
     </nav>
     <aside>aside</aside>
@@ -53,27 +54,30 @@
     <footer>
 	    <div class="footer-sections">
 	    	<div class="section-separator">
-	    		<h4>seccion 1</h4>
+	    		<h4>Categorias</h4>
 	    		<ul>
-		            <li><a href="base.css">enlace</a></li>
-		            <li><a href="base.css">enlace</a></li>
-		            <li><a href="base.css">enlace</a></li>
+		            <li><a href="base.css">Cultura</a></li>
+		            <li><a href="base.css">Tecnologia</a></li>
+		            <li><a href="base.css">Ocio</a></li>
+		            <li><a href="base.css">Actualidad</a></li>
 		        </ul>
 	    	</div>
 	    	<div class="section-separator">
-	    		<h4>seccion 2</h4>
+	    		<h4>Filtros</h4>
 	    		<ul>
-		            <li><a href="base.css">enlace</a></li>
-		            <li><a href="base.css">enlace</a></li>
-		            <li><a href="base.css">enlace</a></li>
+		            <li><a href="base.css">Enviar historia</a></li>
+		            <li><a href="base.css">Portada</a></li>
+		            <li><a href="base.css">Nuevas</a></li>
+		            <li><a href="base.css">Populares</a></li>
 		        </ul>
 	    	</div>
 	    	<div>
-	    		<h4>seccion 3</h4>
+	    		<h4>Usuario</h4>
 	    		<ul>
-		            <li><a href="base.css">enlace</a></li>
-		            <li><a href="base.css">enlace</a></li>
-		            <li><a href="base.css">enlace</a></li>
+		            <li><a href="base.css">Login</a></li>
+		            <li><a href="base.css">Ver perfil</a></li>
+		            <li><a href="base.css">Modificar perfil</a></li>
+		            <li><a href="base.css">Ver mis noticias</a></li>
 		        </ul>
 	    	</div>
     	</div>
