--- a/Proyecto/ver-perfil.html
+++ b/Proyecto/ver-perfil.html
@@ -32,7 +32,7 @@
 	</div>
 	<div class="head" id="logo-search">
 		<div><img alt="" src="img/elef.png"></div>
-		<div><b>Nombre-categoria</b></div>
+		<div><b>edicion general</b></div>
 		<div>
 			<img alt="" src="img/fb.png">
 			<img alt="" src="img/tw.png">
@@ -43,9 +43,10 @@
 	</div>
 	<nav>
         <ul>
-            <li><a href="base.css">item</a></li>
-            <li><a href="base.css">item</a></li>
-            <li><a href="base.css">item</a></li>
+            <li><a href="registrar-noticia.html">enviar historia</a></li>
+            <li><a href="base.css">portada</a></li>
+            <li><a href="base.css">nuevas</a></li>
+            <li><a href="base.css">populares</a></li>
         </ul>
     </nav>
     <article>
@@ -99,31 +100,34 @@
     </article>
     <footer>
 	    <div class="footer-sections">
-	    	<div class="section-separator">
-	    		<h4>seccion 1</h4>
-	    		<ul>
-		            <li><a href="base.css">enlace</a></li>
-		            <li><a href="base.css">enlace</a></li>
-		            <li><a href="base.css">enlace</a></li>
-		        </ul>
-	    	</div>
-	    	<div class="section-separator">
-	    		<h4>seccion 2</h4>
-	    		<ul>
-		            <li><a href="base.css">enlace</a></li>
-		            <li><a href="base.css">enlace</a></li>
-		            <li><a href="base.css">enlace</a></li>
-		        </ul>
-	    	</div>
-	    	<div>
-	    		<h4>seccion 3</h4>
-	    		<ul>
-		            <li><a href="base.css">enlace</a></li>
-		            <li><a href="base.css">enlace</a></li>
-		            <li><a href="base.css">enlace</a></li>
-		        </ul>
-	    	</div>
-    	</div>
+            <div class="section-separator">
+                <h4>Categorias</h4>
+                <ul>
+                    <li><a href="base.css">Cultura</a></li>
+                    <li><a href="base.css">Tecnologia</a></li>
+                    <li><a href="base.css">Ocio</a></li>
+                    <li><a href="base.css">Actualidad</a></li>
+                </ul>
+            </div>
+            <div class="section-separator">
+                <h4>Filtros</h4>
+                <ul>
+                    <li><a href="base.css">Enviar historia</a></li>
+                    <li><a href="base.css">Portada</a></li>
+                    <li><a href="base.css">Nuevas</a></li>
+                    <li><a href="base.css">Populares</a></li>
+                </ul>
+            </div>
+            <div>
+                <h4>Usuario</h4>
+                <ul>
+                    <li><a href="base.css">Login</a></li>
+                    <li><a href="base.css">Ver perfil</a></li>
+                    <li><a href="base.css">Modificar perfil</a></li>
+                    <li><a href="base.css">Ver mis noticias</a></li>
+                </ul>
+            </div>
+        </div>
     	<div class="footer-sections">
     		<img alt="" src="img/logo-bottom.png">
     		<div id="copyrigth">
