--- a/Proyecto/modificar-borrar-noticia.html
+++ b/Proyecto/modificar-borrar-noticia.html
@@ -25,9 +25,10 @@
 				<li><a>deportes</a></li>
 			</ul>
 		</div>
-		<div class="rigth">
-			<a href="login">login</a> /
-			<a href="signup">registrarse</a>
+		<div class="rigth login-succ">
+			<a hred="">nombreusuario</a>
+			<img id="avatar-login" alt="avatar usuario" src="img/pic-test.jpeg">
+			<img id="shutdown" alt="" src="img/logout.png">
 		</div>
 	</div>
 	<div class="head" id="logo-search">
@@ -116,7 +117,7 @@
 							</span>
 						</div>
 						<div class="show-comments">
-							<span class="noticia-sep comments-link"><span class="contador">20</span> <a href="comments">comentarios</a></span>
+							<span class="noticia-sep comments-link"><span class="contador">20</span> <a href="view-comment.html">comentarios</a></span>
 							<span class="noticia-sep">| </span>
 							<span class="noticia-sep">categoria </span>
 							<span class="noticia-sep">| </span>
