--- a/Proyecto/view-comment.html
+++ b/Proyecto/view-comment.html
@@ -26,8 +26,8 @@
 			</ul>
 		</div>
 		<div class="rigth">
-			<a href="login">login</a> /
-			<a href="signup">registrarse</a>
+			<a href="login.html">login</a> /
+			<a href="signup.html">registrarse</a>
 		</div>
 	</div>
 	<div class="head" id="logo-search">
