--- a/Proyecto/lista-noticias.html
+++ b/Proyecto/lista-noticias.html
@@ -25,8 +25,8 @@
 			</ul>
 		</div>
 		<div class="rigth">
-			<a href="login">login</a> /
-			<a href="signup">registrarse</a>
+			<a href="login.html">login</a> /
+			<a href="registro.html">registrarse</a>
 		</div>
 	</div>
 	<div class="head" id="logo-search">
@@ -115,7 +115,7 @@
 							</span>
 						</div>
 						<div class="show-comments">
-							<span class="noticia-sep comments-link"><span class="contador">20</span> <a href="comments">comentarios</a></span>
+							<span class="noticia-sep comments-link"><span class="contador">20</span> <a href="view-comment.html">comentarios</a></span>
 							<span class="noticia-sep">| </span>
 							<span class="noticia-sep">categoria </span>
 							<span class="noticia-sep">| </span>
