--- a/Proyecto/login.html
+++ b/Proyecto/login.html
@@ -25,8 +25,8 @@
 			</ul>
 		</div>
 		<div class="rigth">
-			<a href="">login</a> /
-			<a href="">registrarse</a>
+			<a href="login.html">login</a> /
+			<a href="registro.html">registrarse</a>
 		</div>
 	</div>
 	<div class="head" id="logo-search">
